<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    android:background="@drawable/background"
    >
    <com.xhao.shenwuhelper.TitleLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/title_xiulian"
        ></com.xhao.shenwuhelper.TitleLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_xiulian"
        android:id="@+id/tv1"
        android:layout_marginTop="40dp"
        android:text="@string/xiulian1"
        android:textSize="15sp"
        android:padding="10dp"
        />
    <RelativeLayout
       android:layout_height="wrap_content"
	   android:layout_width="wrap_content"
	   android:background="@drawable/table_frame_gray"
	   android:layout_below="@id/tv1"
        >
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:id="@+id/tl1"       
        android:padding="10dp"
        android:stretchColumns="1"
        >

    <TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/xiulian2"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    <EditText
	        android:id="@+id/dangqiandengji_input"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:inputType="number|phone"
	        android:hint=""
	        android:singleLine="true"
	        />
	    <Button
	        android:id="@+id/queding_xiulian"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/gem3"
	        android:textSize="17sp"
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/xiulian3"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    <EditText
	        android:id="@+id/mubiaodengji_input"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:inputType="number|phone"
	        android:hint=""
	        android:singleLine="true"
	        />
	    
	    </TableRow>
	    	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/xiulian4"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:gravity="center"
	        />
	    <TextView
	        android:id="@+id/suoxujingyan_output"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    
	    </TableRow>	    
    </TableLayout>
    <RelativeLayout 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/tl1"
	    android:layout_centerHorizontal="true"
        >
	    	
	    <CheckBox 	 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:id="@+id/cb1"
	        android:checked="true"
	        android:text="@string/xiulian5"
	        />    
	    <CheckBox 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_below="@id/cb1"
	        android:id="@+id/cb2"
	        android:checked="false"
	        android:text="@string/xiulian6"
	        />

	    <CheckBox 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_toEndOf="@id/cb1"
	        android:id="@+id/cb3"
	        android:checked="false"
	        android:text="@string/xiulian7"
	        />    
	    <CheckBox 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_toEndOf="@id/cb2"
	        android:layout_below="@id/cb3"
	        android:id="@+id/cb4"
	        android:checked="false"
	        android:text="@string/xiulian8"
	        />

    </RelativeLayout>
</RelativeLayout>
</RelativeLayout>
