<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    android:background="@drawable/background"
    >
    <com.xhao.shenwuhelper.TitleLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        ></com.xhao.shenwuhelper.TitleLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    >
    <EditText 
        android:id="@+id/ih_search_et"
        android:layout_width="0dp"      
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/ih_search_hint"
        android:singleLine="true"
        />
	<ImageButton 
	    android:id="@+id/ih_search_button"
	    android:gravity="center"
	    android:layout_width="0dp" 
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:background="@drawable/background_anniu"
	    android:src="@drawable/ih_search"
        android:contentDescription="@string/app_name"
	    />
	</LinearLayout>
	<TableLayout 
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    android:padding="5dp"
	    >
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/name"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/attack"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/attack"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/defence"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/defence"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/physique"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/physique"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/magic"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/magic"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/speed"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/speed"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	<TableRow
	    android:layout_height="40dp"
	     >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/skill"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	    <TextView 
	        android:id="@+id/skill"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="20sp"
	        android:padding="5dp"
	        android:background="@drawable/table_frame_gray"  
	        />
	</TableRow>
	</TableLayout>
</LinearLayout>
