<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xhao.shenwuhelper.MainActivity" 
    android:background="@drawable/background"
    >
    <com.xhao.shenwuhelper.TitleLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        ></com.xhao.shenwuhelper.TitleLayout>
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_centerInParent="true"
        android:id="@+id/ll1"
        >
	<Button 
	    android:id="@+id/tujian"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/tujian"
	    android:textColor="#FAFFF0"
	    android:background="@drawable/background_anniu"
	    />
	<Button 
	    android:id="@+id/baoshi"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/baoshi"
	    android:textColor="#FAFFF0"
	    android:background="@drawable/background_anniu"
	    />
	<Button 
	    android:id="@+id/xiulian"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/xiulian"
	    android:textColor="#FAFFF0"
	    android:background="@drawable/background_anniu"
	    />
    </LinearLayout>
	<LinearLayout
    android:id="@+id/adLayout"
    android:layout_below="@id/ll1"
    android:layout_marginTop="60dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">
</LinearLayout>
</RelativeLayout>
