<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background" >
    <com.xhao.shenwuhelper.TitleLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/title_gem"
        ></com.xhao.shenwuhelper.TitleLayout>
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/title_gem"
         >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:layout_marginTop="10dp"
        android:text="@string/gem1"
        android:textSize="15sp"
        android:padding="10dp"
        />
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:id="@+id/tl1"
        android:layout_marginBottom="30dp"
        android:background="@drawable/table_frame_gray"
        android:padding="10dp"
        android:stretchColumns="1"
        >

    <TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/gem2"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    <EditText
	        android:id="@+id/yijijiage_input"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:inputType="number|phone"
	        android:hint=""
	        android:singleLine="true"
	        />
	    <Button
	        android:id="@+id/dangebaoshi_button"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/gem3"
	        android:textSize="17sp"
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/gem4"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    <EditText
	        android:id="@+id/mubiaodengji_input"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:inputType="number|phone"
	        android:hint=""
	        android:singleLine="true"
	        />
	    
	    </TableRow>
	    	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/gem5"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:gravity="center"
	        />
	    <TextView
	        android:id="@+id/dangebaoshi_output"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    
	    </TableRow>
    </TableLayout>

    
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv2"
        android:layout_below="@id/tl1"
        android:text="@string/gem6"
        android:textSize="15sp"
        android:padding="10dp"
        />
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:background="@drawable/table_frame_gray"
        android:padding="10dp"
        android:stretchColumns="1"
        >

    <TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/gem2"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    <EditText
	        android:id="@+id/yijijiage_input_yitao"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:inputType="number|phone"
	        android:hint=""
	        android:singleLine="true"
	        />
	    <Button
	        android:id="@+id/yitaobaoshi_button"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/gem3"
	        android:textSize="17sp"
	        />
	</TableRow>
	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/gem4"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    <EditText
	        android:id="@+id/mubiaodengji_input_yitao"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:inputType="number|phone"
	        android:hint=""
	        android:singleLine="true"
	        />
	    
	    </TableRow>
	    	<TableRow >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:text="@string/gem5"
	        android:textSize="17sp"
	        android:padding="5dp"
	        android:gravity="center"
	        />
	    <TextView
	        android:id="@+id/yitaobaoshi_output"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:padding="5dp"
	        />
	    
	    </TableRow>
    </TableLayout>
    </RelativeLayout>
</RelativeLayout>
